[package]
name = "sbtext-rs"
version = "1.0.1"
edition = "2021"

[lib]
name = "sbtext_rs_core"
crate-type = ["rlib", "cdylib"]

[features]
default = []
wasm-bindings = ["dep:wasm-bindgen"]

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
regex = "1"
tempfile = "3"
serde_json = "1"
zip = { version = "2", default-features = false, features = ["deflate"] }
md5 = "0.7"
xmltree = "0.11"
wasm-bindgen = { version = "0.2", optional = true }
